# multimodel-policy-mgmt

./: .pre-commit-config.yaml  PendingChanges.md  README.md  constitution.md
backend/: CreatePolicy.md  Deploy&Integrate.md  Makefile  Makefile.md  SampleAPPIntegration.md  SampleAppIntegration.py  app.db  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: README.md  __init__.py  router.py
backend/app/core/: README.md  __init__.py  auth.py  config.py  contracts.py  deps.py  errors.py  hashing.py  logging.py  patterns.py
backend/app/db/: README.md  base.py  session.py
backend/app/models/: README.md  __init__.py  decision_log.py  evidence_bundle.py  evidence_item.py  policy.py  policy_approval.py  policy_version.py  request_log.py  risk_score.py  tenant.py
backend/app/repos/: README.md  __init__.py  audit_repo.py  evidence_repo.py  policy_repo.py  tenant_repo.py
backend/app/schemas/: README.md  __init__.py  audit.py  evidence.py  evidence_bundle.py  generation.py  policies.py  policy_format.py  protect.py
backend/app/services/: README.md  auth_service.py  compliance_export.py  decision_service.py  governance_ledger.py  governed_generation_service.py  groundedness_engine.py  llm_gateway.py  policy_engine.py  policy_workflow.py  rag_proxy.py  (+2 more)
backend/tests/: conftest.py  fakes.py  test_api_audit.py  test_api_evidence.py  test_api_policies.py  test_api_protect.py  test_api_protect_generate.py  test_audit_repo.py  test_auth.py  test_auth_service_unit.py  test_decision_service_unit.py  test_evidence_repo.py  test_governance_ledger.py  test_governed_generation_service_unit.py  test_hashing.py  test_patterns.py  test_policy_engine.py  test_policy_repo.py  test_risk_engine.py  test_tenant_repo.py
(+32 files in other folders)
